@startuml

title __COMMANDS's Class Diagram__\n

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          class academy.mindswap.games_factory.wheel_of_fortune.commands.BankruptHandler {
              + execute()
          }
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          enum Command {
            BANKRUPT
            FIFTY
            FIVE_HUNDRED
            FREE_PLAY
            MISS_TURN
            ONE_HUNDRED
            ONE_THOUSAND
            THREE_HUNDRED
            description
            handler
            isPenalty
          }
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          interface academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler {
              {abstract} + execute()
          }
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          class academy.mindswap.games_factory.wheel_of_fortune.commands.FreePlayHandler {
              + execute()
          }
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          class academy.mindswap.games_factory.wheel_of_fortune.commands.MissTurnHandler {
              + execute()
          }
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        namespace commands {
          class academy.mindswap.games_factory.wheel_of_fortune.commands.MoneyHandler {
              {static} - VOWEL_PRICE : int
              {static} - WINNER_BONUS : int
              - bonus : int
              + MoneyHandler()
              + execute()
              - checkIfPlayerGuessedQuote()
              - checkedIfLetterIsDoubled()
              - consonantFlow()
              - getAlreadyChosenRegex()
              - getMessageFromBuffer()
              - getPlayerAnswer()
              - guessQuoteFlow()
              - playerGuessedLetter()
              - validateAnswer()
              - vowelFlow()
          }
        }
      }
    }
  }
  

  academy.mindswap.games_factory.wheel_of_fortune.commands.BankruptHandler .up.|> academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler
  academy.mindswap.games_factory.wheel_of_fortune.commands.Command o-- academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler : handler
  academy.mindswap.games_factory.wheel_of_fortune.commands.FreePlayHandler .up.|> academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler
  academy.mindswap.games_factory.wheel_of_fortune.commands.MissTurnHandler .up.|> academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler
  academy.mindswap.games_factory.wheel_of_fortune.commands.MoneyHandler .up.|> academy.mindswap.games_factory.wheel_of_fortune.commands.CommandHandler
  academy.mindswap.games_factory.wheel_of_fortune.commands.MoneyHandler o-- academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune : game
  academy.mindswap.games_factory.wheel_of_fortune.commands.MoneyHandler o-- academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune.PlayerHandler : playerHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
